# CppTemplateProject

./: .gitignore  README.md
AppSolution/: AppSolution.sln
AppSolution/App/: App.cpp  App.vcxproj  App.vcxproj.filters  CMakeLists.txt  DerivedClass.cpp  DerivedClass.h  SampleClass.cpp  SampleClass.h  build.sh  dos2unix.sh  pch.h
AppSolution/AppTest/: AppTest.vcxproj  AppTest.vcxproj.filters  DerivedClass_Test.cpp  DerivedClass_Test.h  SampleClass_Test.cpp  SampleClass_Test.h  Sample_Test.cpp  Sample_Test.h  Test_Fixture.cpp  Test_Fixture.h  main.cpp  pch.h
